Fixed issue with Animals category not showing

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ header {
   color: var(--clr-secondary);
   background-color: var(--clr-primary);
   text-align: center;
-  position: fixed;
+  position: sticky;
+  top:0;
   width: 100%;
   z-index: 1000;
 }
